fix: spacing issues

--- a/src/components/articles/articles.scss
+++ b/src/components/articles/articles.scss
@@ -32,8 +32,7 @@
     .Thumbnail {
       background-position: center;
       background-size: cover;
-      height: 200px;
-      width: 100%;
+      height: 250px;
     }
 
     .Titles {
